internal/gatewayapi/testdata/gateway-backend-tls-curves-override.out.yaml
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: http-backend
    namespace: default
  spec:
    endpoints:
    - fqdn:
        hostname: example.com
        port: 8080
    tls:
      ecdhCurves:
      - X25519
      wellKnownCACertificates: System
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-btls
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: http-backend
        namespace: default
        port: 8080
      matches:
      - path:
          type: Exact
          value: /exact
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-btls:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          backendTLS:
            ecdhCurves:
            - P-256
            - P-384
          logging: {}
        status: {}
      listeners:
      - name: envoy-gateway/gateway-btls/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-btls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-btls
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-btls:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-btls-a945b5bb
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-btls
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-btls-a945b5bb
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-btls
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-btls/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-btls
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-btls/rule/0
          settings:
          - addressType: FQDN
            endpoints:
            - host: example.com
              port: 8080
            metadata:
              kind: Backend
              name: http-backend
              namespace: default
            name: httproute/envoy-gateway/httproute-btls/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: null
              caCertificate:
                name: http-backend/default-ca
              ecdhCurves:
              - X25519
              useSystemTrustStore: true
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-btls
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-btls/rule/0/match/0/*
        pathMatch:
          distinct: false
          exact: /exact
          name: ""
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
